proper build system and fix injection

--- a/static/index.html
+++ b/static/index.html
@@ -36,9 +36,9 @@
 					</a>
 				</li>
 				<li>
-					<a href="#add">
-						<i class="fa fa-plus"></i>
-						<span>Add</span>
+					<a href="/swarm">
+						<i class="fa fa-magnet"></i>
+						<span>Swarm</span>
 					</a>
 				</li>
 			</ul>
